# eduroamfiles

./: .dockerignore  .gitignore  docker-compose.yaml  example_status.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.devcontainer/: devcontainer.json
apps/backend/: .gitignore  Dockerfile  nodemon.json  package.json  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: app.module.ts  app.service.ts  main.ts
apps/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/backend/src/chat/: bot.service.ts  chat.controller.ts  chat.module.ts  chat.service.ts
apps/backend/src/final-phrase/: final-phrase.controller.ts  final-phrase.module.ts  final-phrase.service.ts
apps/backend/src/prisma/: prisma.module.ts  prisma.service.ts
apps/backend/src/step1/: step1.controller.ts  step1.module.ts  step1.service.ts
apps/backend/src/step2/: step2.controller.ts  step2.module.ts  step2.service.ts
apps/backend/src/step3/: step3.controller.ts  step3.module.ts  step3.service.ts
apps/backend/src/step5/: step5.controller.ts  step5.module.ts  step5.service.ts
apps/backend/src/user/: user.controller.ts  user.module.ts  user.service.ts
apps/frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
utils/: eof-injector.py
utils/videoseal-service/: Dockerfile  docker-compose.yml  pyproject.toml  run.sh
utils/videoseal-service/app/: main.py  watermark.py
utils/videoseal-service/app/static/: index.html
(+28 files in other folders)
